--- a/Mobile/UQACApp/app/src/main/AndroidManifest.xml
+++ b/Mobile/UQACApp/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".Cours_activity"></activity>
+        <activity android:name=".Cours_activity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Horaire"></activity>
     </application>
 
 </manifest>
