Ajout de la page liste des cours

--- a/Mobile/UQACApp/app/src/main/AndroidManifest.xml
+++ b/Mobile/UQACApp/app/src/main/AndroidManifest.xml
@@ -17,15 +17,15 @@
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
         <activity android:name=".Cours_activity" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".Horaire" />
-        <activity android:name=".evaluations"></activity>
+        <activity android:name=".evaluations" />
+        <activity android:name=".listcours">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
